# wigcpp-benchmark

./: .clang-format  .clangd  CMakeLists.txt  README.md
include/: benchmark_utils.hpp
logs/baseline/: benchmark_2026-06-07_14-00-48.488689046.json  benchmark_2026-06-10_08-01-56.272811726.json  benchmark_2026-06-10_08-04-05.870187092.json
src/: baseline.cpp  benchmark.cpp  correctness.cpp  fix_test.cpp
